--- a/public/style.css
+++ b/public/style.css
@@ -78,7 +78,8 @@ td {
   font-weight: bold;
 }
 
-.pastel-wrapper {
+.pastel-wrapper,
+.pastel-wrapper2 {
   border: none;
   border-radius: 10px;
   background-color: #c6e5ff2a;
@@ -91,37 +92,6 @@ td {
   padding: 10px;
   color: #000000;
   border-radius: 20px;
-}
-
-.pastel0 {
-  background-color: #cd68ff;
-}
-.pastel1 {
-  background-color: #919191;
-}
-.pastel2 {
-  background-color: #ffffff;
-}
-.pastel3 {
-  background-color: #e43636;
-}
-.pastel4 {
-  background-color: #2d4f94;
-}
-.pastel5 {
-  background-color: #5fff3b;
-}
-.pastel6 {
-  background-color: #ff6f00;
-}
-.pastel7 {
-  background-color: rgb(0, 247, 255);
-}
-.pastel8 {
-  background-color: #ffeb38;
-}
-.pastel9 {
-  background-color: #f8c0ff;
 }
 
 button {
@@ -216,36 +186,25 @@ button:hover {
   scale: 1.05;
 }
 
-.sortable-ghost {
-  opacity: 0.3;
-}
-
-.dragging {
-  opacity: 0.6;
-  background-color: #f0f8ff;
-  border: 2px dashed #4a90e2;
-}
-
 tr td:nth-child(1),
-tr td:nth-child(2) {
+tr td:nth-child(2),
+tr td:nth-child(3) {
   font-size: 24px;
 }
-tr td:nth-child(1) {
+tr td:nth-child(2) {
   min-width: 90px;
 }
-tr td:nth-child(2) {
+tr td:nth-child(3) {
   min-width: 65px;
 }
-tr td:nth-child(3) {
+tr td:nth-child(4) {
   min-width: 80px;
 }
 
-#sortable tr {
-  cursor: move;
-}
 #sortable td {
   padding: 10px;
 }
+
 .selected {
   background-color: white;
   color: black;
@@ -266,7 +225,54 @@ tr td:nth-child(3) {
 .initial_title {
   padding: 10px 0px;
 }
-img {
-  padding: 20px 20px 40px 20px;
-  width: 80%;
+
+#order_button {
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 30px;
+  height: 30px;
+  background-color: #000000;
+  color: white;
+}
+
+.order_box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+
+#add_button {
+  width: 100%;
+}
+
+#initial_control {
+  float: right;
+  width: 100px;
+  background-color: #000000;
+  color: white;
+  font-size: 12px;
+}
+#chart_number {
+  background-color: black;
+  color: white;
+  padding: 4px;
+  border-radius: 20px;
+}
+
+#modalOverlay {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* 반투명 */
+  z-index: 999; /* 모달보다 아래, 나머지보다 위 */
+}
+
+#memo {
+  background-color: white;
 }
