--- a/public/style.css
+++ b/public/style.css
@@ -230,8 +230,6 @@ tr td:nth-child(4) {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 30px;
-  height: 30px;
   background-color: #000000;
   color: white;
 }
@@ -248,7 +246,9 @@ tr td:nth-child(4) {
   width: 100%;
 }
 
-#initial_control {
+#initial_control,
+#time_view {
+  margin: 0px 4px;
   float: right;
   width: 100px;
   background-color: #000000;
@@ -275,4 +275,27 @@ tr td:nth-child(4) {
 
 #memo {
   background-color: white;
+}
+@media (max-width: 991px) {
+  th,
+  td {
+    font-size: 15px !important;
+    padding: 5px !important;
+  }
+
+  .pastel {
+    font-size: 15px !important;
+    padding: 5px 7px !important;
+  }
+
+  button {
+    font-size: 12px !important;
+    padding: 3px 7px !important;
+  }
+  .patient_input {
+    min-width: 200px;
+  }
+  .order_box {
+    gap: 3px;
+  }
 }
